k8s/minikube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app.kubernetes.io/name: jerney-backend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: jerney-backend
        app.kubernetes.io/part-of: jerney
        app.kubernetes.io/component: backend

    spec:
      automountServiceAccountToken: false

      containers:
        - name: backend
          image: rohith4693/jerney-backend:v1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 300m
              memory: 256Mi

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL

          livenessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
