k8s/minikube/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jerney-backend
  namespace: jerney
  labels:
    app.kubernetes.io/name: jerney-backend
    app.kubernetes.io/part-of: jerney
    app.kubernetes.io/component: backend

spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: jerney-backend

  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
